--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "html-context": "^1.0.6",
     "https": "^1.0.0",
     "path": "^0.12.7",
+    "react-intersection-observer": "^9.5.2",
+    "react-spring": "^9.7.3",
     "sass": "^1.69.0"
   },
   "devDependencies": {
