--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "fs": "^0.0.1-security",
     "html-context": "^1.0.6",
     "https": "^1.0.0",
